!main!test!simplify!modify!code!envi!refactor!rename!rework
[.gitattributes] > simplified gitattrbiutes, bc we do not have resource files
[code/AnyLeNum.cpp] > refactoring, improving the testing implementation
[code/AnyLeNum.hpp] > added an integer class, included some standard headers
[envi/CMakeLists.txt]
> refactored everything
> removed mark_as_advanced calls
> > there are too many options
> FetchContent for fmt instead of find_package
> simplified variable names
> added failing test named TestingArg
> prefixed each option with the project name

--- a/envi/CMakeLists.txt
+++ b/envi/CMakeLists.txt
@@ -1,103 +1,124 @@
-cmake_minimum_required(VERSION 3.3...3.8)
+cmake_minimum_required(VERSION 3.24)
+
+include(CMakeDependentOption)
+include(FetchContent)
+
 # proj
+
 set(vProjName "AnyLeNum")
-set(vProjNameLib "l${vProjName}")
-set(vProjNameDll "${vProjNameLib}Shared")
-set(vProjNameSll "${vProjNameLib}Static")
-set(vProjNameExe "e${vProjName}")
-set(vProjNameDef "d${vProjName}")
-set(vProjVnumMaj 0)
-set(vProjVnumMin 0)
-set(vProjVnum "${vProjVnumMaj}.${vProjVnumMin}")
+set(vProjVnum "0.0")
 set(vProjDesc "Any Length Number")
+set(vProjPath "${CMAKE_SOURCE_DIR}/..")
+
 project(${vProjName} VERSION ${vProjVnum} DESCRIPTION ${vProjDesc})
-# osys
-mark_as_advanced(FORCE CMAKE_OSX_ARCHITECTURES)
-mark_as_advanced(FORCE CMAKE_OSX_DEPLOYMENT_TARGET)
-mark_as_advanced(FORCE CMAKE_OSX_SYSROOT)
+
 # lang
+
 enable_language(CXX)
 set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
+
 # tool
+
 set(vToolGnuccFlag "$<COMPILE_LANG_AND_ID:CXX,GNU>")
 set(vToolClangFlag "$<COMPILE_LANG_AND_ID:CXX,ARMClang,AppleClang,Clang>")
 set(vToolMsvccFlag "$<COMPILE_LANG_AND_ID:CXX,MSVC>")
-# file
-set(vFileDirMainRoot "${PROJECT_SOURCE_DIR}/..")
-set(vFileDirMainCode "${vFileDirMainRoot}/code")
-set(vFileSetMainCode "${vFileDirMainCode}/${vProjName}.cpp")
-set(vFileDirMainHead "${vFileDirMainRoot}/code")
-set(vFileSetMainHead "${vFileDirMainHead}/${vProjName}.hpp")
-set(vFileDirMainBins "${PROJECT_BINARY_DIR}")
-set(vFileSetMainBins "${vFileDirMainBins}/${vProjNameExe}")
-set(vFileDirMainData "${vFileDirMainRoot}/data")
-set(vFileDirDestRoot "$ENV{HOME}$ENV{UserProfile}/.local")
-set(vFileDirDestHead "${vFileDirDestRoot}/include")
-set(CMAKE_PREFIX_PATH "${vFileDirDestRoot}" CACHE PATH "destination prefix" FORCE)
-set(CMAKE_INSTALL_PREFIX "" CACHE PATH "install prefix" FORCE)
+
+# code
+
+set(vCodePath "${vProjPath}/code")
+set(vCodeList "${vCodePath}/${vProjName}.cpp")
+
 # make
+
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-# lib
-option(oMakeLib "make project library" TRUE)
-if(oMakeLib)
-  add_library(${vProjNameLib} INTERFACE)
-  target_compile_definitions(${vProjNameLib} INTERFACE ${vProjNameDef}MakeLib)
-  target_compile_definitions(${vProjNameLib} INTERFACE
-    ${vProjNameDef}ProjName="${vProjName}"
-    ${vProjNameDef}ProjVnum="${vProjVnumWhole}"
-    ${vProjNameDef}FileRoot="${vFileDirMainRoot}"
-    ${vProjNameDef}FileData="${vFileDirMainData}"
-    "$<${vToolGnuccFlag}:${vProjNameDef}ToolGnuccFlag>"
-    "$<${vToolClangFlag}:${vProjNameDef}ToolClangFlag>"
-    "$<${vToolMsvccFlag}:${vProjNameDef}ToolMsvccFlag>"
-    ) # target_compile_definitions
-  target_compile_options(${vProjNameLib} INTERFACE
-    "$<${vToolGnuccFlag}:>"
-    "$<${vToolClangFlag}:>"
-    "$<${vToolMsvccFlag}:>"
-    ) # target_compile_options
-  target_include_directories(${vProjNameLib} INTERFACE
-    "$<BUILD_INTERFACE:${vFileDirMainCode}>;"
-    "$<INSTALL_INTERFACE:${vFileDirDestHead}>;"
-    ) # target_include_directories
-  find_package(fmt 10.0.0 REQUIRED)
-  target_link_libraries(${vProjNameLib} INTERFACE fmt::fmt)
-  mark_as_advanced(FORCE fmt_DIR)
-  # dll
-  option(oMakeDll "make project shared library" TRUE)
-  if(oMakeDll)
-    add_library(${vProjNameDll} SHARED ${vFileSetMainCode})
-    target_compile_definitions(${vProjNameDll} PRIVATE ${vProjNameDef}MakeDll)
-    target_link_libraries(${vProjNameDll} PRIVATE ${vProjNameLib})
-  endif(oMakeDll)
-  # sll
-  option(oMakeSll "make project static library" TRUE)
-  if(oMakeSll)
-    add_library(${vProjNameSll} STATIC ${vFileSetMainCode})
-    target_compile_definitions(${vProjNameSll} PRIVATE ${vProjNameDef}MakeSll)
-    target_link_libraries(${vProjNameSll} PRIVATE ${vProjNameLib})
-  endif(oMakeSll)
-  # exe
-  option(oMakeExe "make project executable" TRUE)
-  if(oMakeExe)
-    add_executable(${vProjNameExe} ${vFileSetMainCode})
-    target_compile_definitions(${vProjNameExe} PRIVATE ${vProjNameDef}MakeExe)
-    target_link_libraries(${vProjNameExe} PRIVATE ${vProjNameLib})
-    find_package(pTermAPar 4.2.1 REQUIRED)
-    target_link_libraries(${vProjNameExe} PRIVATE pTermAPar::lTermAPar)
-    mark_as_advanced(FORCE pTermAPar_DIR)
-    # test
-    include(CTest)
-    enable_testing()
-    #
-    set(vTestName "tHello")
-    add_test(NAME ${vTestName}
-      COMMAND ${vFileSetMainBins} ${vTestName}
-      ) # add_test
-    set_tests_properties(${vTestName} PROPERTIES
-      PASS_REGULAR_EXPRESSION  "HelloWorld"
-      ) # set_tests_properties
-    #
-  endif(oMakeExe)
-endif(oMakeLib)
+
+set(vCdefName "d${vProjName}_")
+set(vMoptName "o${vProjName}_")
+
+##lib
+
+set(vTlibName "t${vProjName}Lib")
+
+add_library(${vTlibName} INTERFACE)
+target_compile_definitions(${vTlibName} INTERFACE ${vCdefName}MakeTlib)
+target_compile_definitions(${vTlibName} INTERFACE
+  ${vCdefName}ProjName="${vProjName}"
+  ${vCdefName}ProjVnum="${vProjVnum}"
+  ${vCdefName}ProjPath="${vProjPath}"
+  "$<${vToolGnuccFlag}:${vCdefName}ToolGnuccFlag>"
+  "$<${vToolClangFlag}:${vCdefName}ToolClangFlag>"
+  "$<${vToolMsvccFlag}:${vCdefName}ToolMsvccFlag>"
+  ) # target_compile_definitions
+target_compile_options(${vTlibName} INTERFACE
+  "$<${vToolGnuccFlag}:>"
+  "$<${vToolClangFlag}:>"
+  "$<${vToolMsvccFlag}:>"
+  ) # target_compile_options
+target_include_directories(${vTlibName} INTERFACE ${vCodePath})
+
+FetchContent_Declare(fmt
+  GIT_REPOSITORY "https://github.com/fmtlib/fmt.git"
+  GIT_TAG "10.0.0"
+  OVERRIDE_FIND_PACKAGE)
+FetchContent_MakeAvailable(fmt)
+find_package(fmt 10.0.0 REQUIRED)
+target_link_libraries(${vTlibName} INTERFACE fmt::fmt)
+
+##dll
+
+set(vTdllName "t${vProjName}Dll")
+
+option(${vMoptName}MakeTdll "build shared library target" TRUE)
+if(${vMoptName}MakeTdll)
+
+  add_library(${vTdllName} SHARED ${vCodeList})
+  target_compile_definitions(${vTdllName} PRIVATE ${vCdefName}MakeTdll)
+  target_link_libraries(${vTdllName} PRIVATE ${vTlibName})
+
+endif(${vMoptName}MakeTdll)
+
+##sll
+
+set(vTsllName "t${vProjName}Sll")
+
+option(${vMoptName}MakeTsll "build static library target" TRUE)
+if(${vMoptName}MakeTsll)
+
+  add_library(${vTsllName} STATIC ${vCodeList})
+  target_compile_definitions(${vTsllName} PRIVATE ${vCdefName}MakeTsll)
+  target_link_libraries(${vTsllName} PRIVATE ${vTlibName})
+
+endif(${vMoptName}MakeTsll)
+
+##exe
+
+set(vTexeName "t${vProjName}Exe")
+set(vTexePath "${RUNTIME_OUTPUT_DIRECTORY}")
+set(vTexeFile "${vTexePath}/${vTexeName}")
+
+option(${vMoptName}MakeTexe "build executable target" TRUE)
+if(${vMoptName}MakeTexe)
+
+  add_executable(${vTexeName} ${vCodeList})
+  target_compile_definitions(${vTexeName} PRIVATE ${vCdefName}MakeTexe)
+  target_link_libraries(${vTexeName} PRIVATE ${vTlibName})
+
+endif(${vMoptName}MakeTexe)
+
+cmake_dependent_option(${vMoptName}MakeTest "build with testing" TRUE
+  ${vMoptName}MakeTexe FALSE)
+if(${vMoptName}MakeTest)
+
+  include(CTest)
+  enable_testing()
+
+  function(fMakeTest vName vText)
+    add_test(NAME ${vName} COMMAND ${vTexeFile} "test" ${vName})
+    set_tests_properties(${vName} PROPERTIES PASS_REGULAR_EXPRESSION  ${vText})
+  endfunction(fMakeTest)
+
+  fMakeTest("TestingArg" "test was not found ! TestingArg")
+  fMakeTest("HelloWorld" "HelloWorld")
+
+endif(${vMoptName}MakeTest)
